[gd_scene load_steps=16 format=2]

[ext_resource path="res://Prefabs/Styles/Fonts/Size40Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Prefabs/Styles/Background_LightBlue.tres" type="StyleBox" id=2]
[ext_resource path="res://Prefabs/Screens/ExporterScreen.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Elements/PopupBtn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/ExporterScreen/TimePeriodSelector.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/Elements/InteractiveButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/ExporterScreen/CustomVars.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Icons/check-mark.png" type="Texture" id=12]
[ext_resource path="res://Prefabs/Styles/Fonts/Size30Bold.tres" type="DynamicFont" id=13]
[ext_resource path="res://Prefabs/Styles/Panel/BottomScreen.tres" type="StyleBox" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 u_color_key : hint_color;
uniform vec4 u_replacement_color : hint_color;

void fragment() {
    vec4 col = texture(TEXTURE, UV);
	float alpha = col.a;
	
    vec4 d4 = abs(col - u_color_key);
    float d = max(max(d4.r, d4.g), d4.b);
    if(d < 0.01) {
        col = u_replacement_color;
    }
    COLOR = col;
	COLOR.a = alpha;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/u_color_key = null
shader_param/u_replacement_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.498039, 0.768627, 0.992157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.498039, 0.768627, 0.992157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.14902, 0.6, 0.984314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ExporterScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" type="Panel" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 180 )
custom_styles/panel = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TopMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -113.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Exporter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" parent="TopMenu" instance=ExtResource( 8 )]
material = SubResource( 2 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -85.0
margin_top = 116.0
margin_right = -20.0
margin_bottom = 176.0
icon = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 181.0
margin_right = -10.0
margin_bottom = -128.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Select period"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePeriodSelector" parent="VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 46.0
margin_right = 700.0
margin_bottom = 146.0

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 700.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 700.0
margin_bottom = 238.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Unchangeable data"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomVars" parent="VBoxContainer" instance=ExtResource( 9 )]
VarList = "<Date>,<Total Working hours>,<Detials>"

[node name="Label8" type="Label" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 700.0
margin_bottom = 338.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="VBoxContainer"]
margin_top = 342.0
margin_right = 700.0
margin_bottom = 384.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Custom data"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomVars2" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 388.0
margin_bottom = 438.0
VarList = "<under construction>"
SelectedAll = false

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 442.0
margin_right = 700.0
margin_bottom = 484.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 488.0
margin_right = 700.0
margin_bottom = 530.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Export format"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportFormat" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 534.0
margin_bottom = 584.0
VarList = ".csv"
SelectedAll = false
DefaultSelection = ".csv"

[node name="Label10" type="Label" parent="VBoxContainer"]
margin_top = 588.0
margin_right = 700.0
margin_bottom = 630.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="VBoxContainer"]
margin_top = 634.0
margin_right = 700.0
margin_bottom = 676.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Export to"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportTo" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 680.0
margin_bottom = 730.0
VarList = "<Downloads/>"
SelectedAll = false
DefaultSelection = "<Downloads/>"

[node name="Label12" type="Label" parent="VBoxContainer"]
margin_top = 734.0
margin_right = 700.0
margin_bottom = 776.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportBtn" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 780.0
margin_right = 700.0
margin_bottom = 870.0
rect_min_size = Vector2( 0, 90 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Export"
flat = false
iconType = "EXPORT"

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 874.0
margin_right = 700.0
margin_bottom = 916.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 920.0
margin_right = 700.0
margin_bottom = 962.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 13 )
text = "More export options?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReportToDev" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 966.0
margin_right = 700.0
margin_bottom = 1027.0
text = "Report to Developer"
iconType = "EMAIL"

[connection signal="pressed" from="TopMenu/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="VBoxContainer/ExportBtn" to="." method="_on_ExportBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ReportToDev" to="." method="_on_ReportToDev_pressed"]
